# C401-D5-Day-05-06

./: .env.example  .gitignore  README.MD  README.md  graph.py  main.py  postgres_checkpointer.py  pyproject.toml  requirements.txt  server.py  streamlit_demo.py
data/: db.db
database/: mockdata.sql  mockdata_academic.sql  mockdata_ctsv_rooms.sql  setup.sql  setup_academic.sql  setup_ctsv_rooms.sql
docs/: 05-reference-document.md  langgraph-http-api.md
group_report/: assignment-tracking.md  feedback-report.md  neo-canvas-report.md  spec-draft-vinuni-vinschool.md  spec-final-vinuni-vinschool.md
individual_reports/2A202600020-DangHoHai/: feedback_A1_DangHoHai.md  reflection.md
individual_reports/2A202600029_DaoPhuocThinh/: Analyze_DaoPhuocThinh_2A202600029.md  feedback_A1_DaoPhuocThinh.md  reflection_2A202600029.md
individual_reports/2A202600031-DaoVanCong/: feedback_2A202600031_DaoVanCong.md  reflection_2A202600031_DaoVanCong.md
individual_reports/2A202600060-HoSyMinhHa/: feedback.md  reflection.md
individual_reports/2A202600224-NguyenTriNhan/: feedback.md  reflection.md
individual_reports/2A202600250-NongNguyenThanh/: feedback.md  reflection.md
logs/: whisper-cpp.logs
scripts/: demo.py
src/: config.py  graph.py  pipeline.py  viz.py
src/api/: __init__.py  app.py  schemas.py  state_serialization.py
src/checkpoints/: __init__.py  postgres.py
src/graph/: __init__.py  builder.py
src/llm/: __init__.py  gemini.py
src/prompts/: react_agent_system.txt  studentops_react_system.txt  text-to-sql.md
src/prompts/v1/planner/: system.txt
src/prompts/v1/sql_generator/: system.txt
src/telemetry/: __init__.py  logger.py  metrics.py
src/templates/: academic_results.html  tuition_notification.html
src/tools/: UC1_tool1_2.py  __init__.py  database.py  db.py  email.py  email_draft.py  export_data_tool.py  postgres_readonly.py  schemaDB_Excuted_.py
src/ui/: renderer.py
src/voice/: __init__.py  config.py  exceptions.py  models.py  recorder.py  stt.py
tests/: conftest.py  test_api.py  test_db_mock.py  test_email_send.py  test_export_tool.py  test_postgres_readonly.py
tools/: UC1_tool1_2.py
