[project]
name = "a20-007-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts>=2.5.4",
    "pandas>=3.0.2",
    "pydub>=0.25.1",
    "streamlit>=1.56.0",
    "streamlit-mic-recorder>=0.0.8",
    "litellm>=1.83.2",
    "matplotlib>=3.9.0",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "openrouter>=0.8.1",
    "pyaudio>=0.2.14",
    "pywhispercpp>=1.4.1",
    "scipy>=1.17.1",
    "langgraph>=0.2.0",
    "langchain-openai",
    "langchain-core",
    "tabulate>=0.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# "**/{tests,docs,tools}/*" = ["E402"]
"**/tests/*" = ["S101"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
# select = [
#     "ALL",
# ]
select = [
    "F",      # pyflakes (runtime errors, unused imports/variables)
    "E", "W", # pycodestyle (style and whitespace)
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (common bugs & best practices)
    "SIM",    # flake8-simplify (code simplification)
    "C4",     # flake8-comprehensions (list/set/dict comprehension help)
    "TC",     # flake8-type-checking (move typing imports to `if TYPE_CHECKING`)
    "PL",     # flake8-unused-arguments
    "RET",    # flake8-return (return statement issues)
    "ARG",    # pylint rules (a subset)
    "ANN",    # type annotations enforcement
    "COM",    # flake8-commas
    "C90",    # maccabe complexity
    "D",      # pydocstyle
    "A",      # flake8-builtins

    # "YTT",
    # "DTZ",
    # "ISC",
    # "ICN",
    # "INP",
    # "PIE",
    # "PT",
    # "TID",
    # "PLC",
    # "PLE",
    # "PLR",
    # "PLW",
    # "RUF",
    # "PYI",
]

ignore = [
    'Q000',   # Double quote
    'ERA001', # Code comment
    'E501',   # line too long
    'F841',   # pyright already supports this
    'F401',   
    'D416',   # numpydocstyle does not use colon in section name
]

fixable = ['ALL']
unfixable = []

[project.optional-dependencies]
silero = ["torch>=2.5.0"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
